--- a/css/update.css
+++ b/css/update.css
@@ -20,31 +20,29 @@ a[data-aos="fade-up"].aos-animate {
 
 
 #displacement_slider {
-	margin: 0 auto;
-    position: relative;
+    margin: 0 auto;
     overflow: hidden;
     list-style: none;
     padding: 0;
-    z-index: 1;
+    width: 100%;
+    height: 100%;
+    z-index:3;
+    transition: opacity 2s;
+    opacity: 0;
+}
+#displacement_slider.show-me {
+    opacity: 1;
 }
 
 
-
 #canvas_holder {
-/*    position: relative;
-    width: 100%;
-    padding-top: 100%;
-    margin: 0 auto;
-    overflow: hidden;*/
     position: relative;
     width: 100%;
     height: 100%;
     z-index: 1;
     display: flex;
+    background: #000;
 }
-
-
-
 
 
 canvas#canvas_slider {
@@ -57,31 +55,9 @@ canvas#canvas_slider {
     bottom: 0;
     z-index: 2;
     cursor: pointer !important;
-    transition: opacity 2s;
-    opacity: 0;
 }
 
 
-canvas#canvas_slider.show-me {
-    opacity: 1;
-}
-
-
-
-
-@media screen and (min-width: 800px) {
-	#canvas-holder {
-        /*padding-top: 50%;*/
-    }
-}
-
-@media screen and (min-width: 1100px) {
-	#canvas-holder {
-/*        width: 60%;
-        padding-top: 60%;
-        margin-right: 50px;*/
-    }
-}
 
 
 
@@ -89,37 +65,66 @@ canvas#canvas_slider.show-me {
     border: 2px solid #08bdc4;
     box-sizing: border-box;
 }
-
-
-.wrap-loader-detail {
-    position: fixed;
-    width: 100vw;
-    height: 100vh;
-    height: calc(var(--vh, 1vh) * 100);
-    top: 0;
-    left: 0;
-    z-index: 50;
-    background-color: #1a1a1a;
+.pause-wrap {
+    display: none;
+}
+.pause-wrap.displacement-slider-loaded {
+    display: block;
 }
 
-.wrap-loader-detail .loading {
+
+@media screen and (min-width: 1100px) {
+    #detail-bien .box-info #docs {
+        margin: 1.5em 0 1.5em;
+    }
+}
+
+
+/*LOADER PAGE DETAIL*/
+.wrap-detail {
+    position: fixed;
+    width:100vw;
+    height:100vh;
+    height: calc(var(--vh, 1vh) * 100);
+    top:0;
+    left:0;
+    z-index:2;
+}
+@media screen and (max-width: 1100px) {
+    .wrap-detail {
+        height: 56.25vw;
+    }
+}
+.wrap-detail.hide-me {
+    display: none;
+}
+.wrap-detail .loading {
     position: absolute;
     top: 50%;
     left: 50%;
-    -webkit-transform: translate(-50%, -50%);
     transform: translate(-50%, -50%);
 }
-
-.wrap-loader-detail .loading .bounceball {
+.wrap-detail .loading .text {
+    color: white;
+    display: inline-block;
+    margin-left: 10px;
+    width: 130px;
+}
+.wrap-detail .loading .bounceball {
     position: relative;
     display: inline-block;
     height: 37px;
     width: 15px;
 }
-
-.wrap-loader-detail .loading .text {
-    color: white;
-    display: inline-block;
-    margin-left: 10px;
-    width: 130px;
+.wrap-detail .loading .bounceball::before {
+    position: absolute;
+    content: '';
+    display: block;
+    top: 0;
+    width: 15px;
+    height: 15px;
+    border-radius: 50%;
+    background-color: white;
+    transform-origin: 50%;
+    animation: bounce 500ms alternate infinite ease;
 }
