--- a/css/layout/_general.scss
+++ b/css/layout/_general.scss
@@ -151,3 +151,8 @@ p{
     top: 0;
   }
 }
+.custom__win-scroll{
+  &::-webkit-scrollbar-track {border-radius: 4px;-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.4);}
+  &::-webkit-scrollbar {width: 8px;}
+  &::-webkit-scrollbar-thumb {border-radius: 4px;background: rgba(0,0,0,0.45);}
+}
