--- a/css/pages/_detail-bien.scss
+++ b/css/pages/_detail-bien.scss
@@ -103,8 +103,8 @@
     }
     &_wrap{
       height: 100%;
-        display: flex;
-        flex-direction: column;
+      display: flex;
+      flex-direction: column;
     }
     &_details {
       padding: 30px;
@@ -113,6 +113,7 @@
       flex-direction: column;
       position: relative;
       overflow: auto;
+      outline: none;
     }
     .title-wrap{
       max-width: calc(100% - 80px);
@@ -287,30 +288,34 @@
     .close-box{
       position: absolute;
       right: 0;
-      top: 4.1em;
-      font-size: 0.75em;
-      font-weight: 500;
-      text-transform: uppercase;
-      color: #bebebe;
-      cursor: pointer;
-      white-space: nowrap;
-      display: flex;
-      align-items: center;
-      transition: .3s;
+      top: 3.62em;
+      overflow: hidden;
       img{
         width: 16px;
       }
-      &:after{
-        content: '';
-        width: 28px;
-        height: 1px;
-        vertical-align: baseline;
-        background: #bebebe;
-        margin-left: 6px;
-      }
-      &:hover{
-        transform: translateX(5px);
-        color: #fff;
+      &__content{
+        font-size: 0.75em;
+        font-weight: 500;
+        text-transform: uppercase;
+        color: #bebebe;
+        cursor: pointer;
+        white-space: nowrap;
+        display: flex;
+        align-items: center;
+        padding: 7px 0 7px 7px;
+        transition: .3s;
+        &:after{
+          content: '';
+          width: 28px;
+          height: 1px;
+          vertical-align: baseline;
+          background: #bebebe;
+          margin-left: 6px;
+        }
+        &:hover{
+          transform: translateX(5px);
+          color: #fff;
+        }
       }
     }
   }
