--- a/css/update.css
+++ b/css/update.css
@@ -88,7 +88,8 @@ canvas#canvas_slider {
     height: calc(var(--vh, 1vh) * 100);
     top:0;
     left:0;
-    z-index:2;
+    background: #3b3c3e;
+    z-index:111;
 }
 @media screen and (max-width: 1100px) {
     .wrap-detail {
