--- a/css/pages/_detail-bien.scss
+++ b/css/pages/_detail-bien.scss
@@ -220,6 +220,39 @@
         }
       }
     }
+    .slider_nav{
+      .slick-slide {
+        margin: 0 1px 1px;
+      }
+      .slider__item__wrap-thumb {
+        position: relative;
+        width: 100%;
+        padding-bottom: 90%;
+        margin: 0 1px;
+        &:after{
+          content: '';
+          position: absolute;
+          top: 0px;
+          left: 0px;
+          right: 0px;
+          bottom: 0px;
+          border: 2px solid rgb(8, 189, 196);
+          opacity: 0;
+        }
+        img {
+          position: absolute;
+          top: 0;
+          left: 0;
+          width: 100%;
+          height: 100%;
+          object-fit: cover;
+        }
+      }
+      .slick-current.slick-center .slider__item__wrap-thumb:after{
+        opacity: 1;
+      }
+    }
+  
     .gallery-thumbs{
       height: 70px;
       flex-shrink: 0;
@@ -402,6 +435,141 @@
       }
     }
   }
+}
+
+.slider_main, 
+.slider_main .slick-list, 
+.slider_main .slick-track, 
+.slider_main .slider__item {
+  height: 100%;
+}
+.slider_main .slider__item img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.slider__item {
+  outline: none;
+  img {
+    max-width: 100%;
+  }
+}
+.animation_play{
+  will-change: transform, transform-origin;
+}
+.animation-zoomIn{
+  transform: scale(1);
+  transform-origin: center;
+  animation: 7s 0.2s linear forwards;
+  &.animation_play{
+    animation-name: zoom-in;
+  }
+}
+@keyframes zoom-in{
+  0%{
+      transform: scale(1);
+  }
+  100%{
+      transform: scale(1.15);
+  }
+}
+
+.animation-zoomOut{
+  transform: scale(1.15);
+  transform-origin: center;
+  animation: 7s 0.2s linear forwards;
+  &.animation_play{
+    animation-name: zoom-out;
+  }
+}
+@keyframes zoom-out{
+  0%{
+      transform: scale(1.15);
+  }
+  100%{
+      transform: scale(1);
+  }
+}
+
+.animation-zoomInToRight{
+  transform: scale(1.10);
+  transform-origin: 20% 70%;
+  animation: 7s 0.2s linear forwards;
+  &.animation_play{
+    animation-name: zoom-in-to-right;
+  }
+}
+@keyframes zoom-in-to-right{
+  0%{
+      transform: scale(1.10);
+      transform-origin: 20% 70%;
+  }
+  100%{
+      transform: scale(1.20);
+      transform-origin: 80% 30%;
+  }
+}
+
+.animation-zoomInToLeft{
+  transform: scale(1.10);
+  transform-origin: 80% 70%;
+  animation: 7s 0.2s linear forwards;
+  &.animation_play{
+    animation-name: zoom-in-to-left;
+  }
+}
+@keyframes zoom-in-to-left{
+  0%{
+      transform: scale(1.10);
+      transform-origin: 80% 70%;
+  }
+  100%{
+      transform: scale(1.20);
+      transform-origin: 20% 30%;
+  }
+}
+
+.animation-zoomOutToRight{
+  transform: scale(1.20);
+  transform-origin: 20% 30%;
+  animation: 7s 0.2s linear forwards;
+  &.animation_play{
+    animation-name: zoom-out-to-right;
+  }
+}
+@keyframes zoom-out-to-right{
+  0%{
+      transform: scale(1.20);
+      transform-origin: 20% 30%;
+  }
+  100%{
+      transform: scale(1.10);
+      transform-origin: 80% 70%;
+  }
+}
+
+.animation-zoomOutToLeft{
+  transform: scale(1.10);
+  transform-origin: 80% 30%;
+  animation: 7s 0.2s linear forwards;
+  &.animation_play{
+    animation-name: zoom-out-to-left;
+  }
+}
+@keyframes zoom-out-to-left{
+  0%{
+      transform: scale(1.10);
+      transform-origin: 80% 30%;
+  }
+  100%{
+      transform: scale(1.20);
+      transform-origin: 20% 70%;
+  }
+}
+
+.stop_slide-animation .animation_play{
+  animation-play-state: paused !important;
 }
 
 /* Virtual link */
