--- a/css/update.css
+++ b/css/update.css
@@ -65,12 +65,6 @@ canvas#canvas_slider {
     border: 2px solid #08bdc4;
     box-sizing: border-box;
 }
-.pause-wrap {
-    display: none;
-}
-.pause-wrap.displacement-slider-loaded {
-    display: block;
-}
 
 
 @media screen and (min-width: 1100px) {
@@ -89,15 +83,17 @@ canvas#canvas_slider {
     top:0;
     left:0;
     background: #3b3c3e;
+    transition: 0.6s;
     z-index:111;
 }
-@media screen and (max-width: 1100px) {
+/* @media screen and (max-width: 1100px) {
     .wrap-detail {
         height: 56.25vw;
     }
-}
+} */
 .wrap-detail.hide-me {
-    display: none;
+    visibility: hidden;
+    opacity: 0;
 }
 .wrap-detail .loading {
     position: absolute;
