--- a/css/style.css
+++ b/css/style.css
@@ -814,16 +814,9 @@ p {
   height: calc(var(--vh, 1vh) * 100);
 }
 
-#intro .swiper-slide.intro-1 {
-  background: url("../img/slide-intro1.jpg") center/cover;
-}
-
-#intro .swiper-slide.intro-2 {
-  background: url("../img/slide-intro2.jpg") center/cover;
-}
-
-#intro .swiper-slide.intro-3 {
-  background: url("../img/slide-intro3.jpg") center/cover;
+#intro .swiper-slide {
+  background-position: center;
+  background-size: cover;
 }
 
 #intro .swiper-container-horizontal > .swiper-pagination-bullets, #intro .swiper-pagination-custom, #intro .swiper-pagination-fraction {
@@ -2003,6 +1996,9 @@ a.disabled {
   right: 7%;
   width: 26%;
   background: rgba(53, 53, 53, 0.9);
+  contain: layout;
+  -webkit-transform: translateZ(1px);
+          transform: translateZ(1px);
 }
 
 #detail-bien .box-info_btns {
@@ -2119,7 +2115,7 @@ a.disabled {
 #detail-bien .box-info #docs {
   width: 100%;
   text-align: center;
-  margin: 2em 0 1.5em;
+  margin: 2em 0 1.2em;
 }
 
 #detail-bien .box-info #docs button {
@@ -2134,6 +2130,7 @@ a.disabled {
   cursor: pointer;
   outline: none;
   position: relative;
+  margin-bottom: 5px;
 }
 
 #detail-bien .box-info #docs button:after {
@@ -2195,8 +2192,7 @@ a.disabled {
 #detail-bien .box-info .slider_nav .slider__item__wrap-thumb {
   position: relative;
   width: 100%;
-  padding-bottom: 90%;
-  margin: 0 1px;
+  padding-bottom: 100%;
 }
 
 #detail-bien .box-info .slider_nav .slider__item__wrap-thumb:after {
@@ -2218,10 +2214,15 @@ a.disabled {
   height: 100%;
   -o-object-fit: cover;
      object-fit: cover;
+  display: block;
 }
 
-#detail-bien .box-info .slider_nav .slick-current.slick-center .slider__item__wrap-thumb:after {
+#detail-bien .box-info .slider_nav .swiper-slide-thumb-active .slider__item__wrap-thumb:after {
   opacity: 1;
+}
+
+#detail-bien .box-info .slider_main__arrow {
+  outline: none;
 }
 
 #detail-bien .box-info .gallery-thumbs {
@@ -2229,13 +2230,6 @@ a.disabled {
   -ms-flex-negative: 0;
       flex-shrink: 0;
   overflow: hidden !important;
-}
-
-#detail-bien .box-info .gallery-thumbs .swiper-slide-thumb-active {
-  opacity: 1;
-  border: 2px solid #08bdc4;
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
 }
 
 #detail-bien .box-info .pause-wrap {
@@ -2278,11 +2272,11 @@ a.disabled {
   right: 14px;
 }
 
-#detail-bien .box-info .pause-btn:active, #detail-bien .box-info .pause-btn.active, #detail-bien .box-info .pause-btn:hover {
+#detail-bien .box-info .pause-btn.active, #detail-bien .box-info .pause-btn.hover {
   border-color: #000;
 }
 
-#detail-bien .box-info .pause-btn:active:before, #detail-bien .box-info .pause-btn:active:after, #detail-bien .box-info .pause-btn.active:before, #detail-bien .box-info .pause-btn.active:after, #detail-bien .box-info .pause-btn:hover:before, #detail-bien .box-info .pause-btn:hover:after {
+#detail-bien .box-info .pause-btn.active:before, #detail-bien .box-info .pause-btn.active:after, #detail-bien .box-info .pause-btn.hover:before, #detail-bien .box-info .pause-btn.hover:after {
   background: #000;
 }
 
@@ -2330,9 +2324,22 @@ a.disabled {
   color: #fff;
 }
 
-#detail-bien .swiper-slide {
+#detail-bien .swiper-slide__bg {
+  width: 100%;
+  height: 100%;
   background-size: cover;
   background-position: center;
+}
+
+#detail-bien .gallery-thumbs .swiper-slide {
+  background-size: cover;
+  background-position: center;
+}
+
+#detail-bien .gallery-thumbs .swiper-slide-thumb-active {
+  border: 2px solid #08bdc4;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
 }
 
 /* Hidden infos, icons */
@@ -2414,261 +2421,92 @@ a.disabled {
   max-width: 100%;
 }
 
-.animation_play {
-  will-change: transform, transform-origin;
+[class*="animation-"] {
+  will-change: transform;
+  opacity: 0;
+  visibility: hidden;
+  -webkit-backface-visibility: hidden;
+          backface-visibility: hidden;
+}
+
+[class*="animation-"].animation_play {
+  -webkit-transition: -webkit-transform 8s;
+  transition: -webkit-transform 8s;
+  transition: transform 8s;
+  transition: transform 8s, -webkit-transform 8s;
+  opacity: 1;
+  visibility: visible;
 }
 
 .animation-zoomIn {
-  -webkit-transform: scale(1);
-          transform: scale(1);
-  -webkit-transform-origin: center;
-          transform-origin: center;
-  -webkit-animation: 7s 0.2s linear forwards;
-          animation: 7s 0.2s linear forwards;
+  -webkit-transform: scale(1) translateZ(0px);
+          transform: scale(1) translateZ(0px);
+  background-position: center;
 }
 
 .animation-zoomIn.animation_play {
-  -webkit-animation-name: zoom-in;
-          animation-name: zoom-in;
-}
-
-@-webkit-keyframes zoom-in {
-  0% {
-    -webkit-transform: scale(1);
-            transform: scale(1);
-  }
-  100% {
-    -webkit-transform: scale(1.15);
-            transform: scale(1.15);
-  }
-}
-
-@keyframes zoom-in {
-  0% {
-    -webkit-transform: scale(1);
-            transform: scale(1);
-  }
-  100% {
-    -webkit-transform: scale(1.15);
-            transform: scale(1.15);
-  }
+  -webkit-transform: scale(1.15) translateZ(0px);
+          transform: scale(1.15) translateZ(0px);
+  background-size: 115%;
 }
 
 .animation-zoomOut {
-  -webkit-transform: scale(1.15);
-          transform: scale(1.15);
-  -webkit-transform-origin: center;
-          transform-origin: center;
-  -webkit-animation: 7s 0.2s linear forwards;
-          animation: 7s 0.2s linear forwards;
+  background-position: center;
+  -webkit-transform: scale(1.15) translateZ(0px);
+          transform: scale(1.15) translateZ(0px);
 }
 
 .animation-zoomOut.animation_play {
-  -webkit-animation-name: zoom-out;
-          animation-name: zoom-out;
-}
-
-@-webkit-keyframes zoom-out {
-  0% {
-    -webkit-transform: scale(1.15);
-            transform: scale(1.15);
-  }
-  100% {
-    -webkit-transform: scale(1);
-            transform: scale(1);
-  }
-}
-
-@keyframes zoom-out {
-  0% {
-    -webkit-transform: scale(1.15);
-            transform: scale(1.15);
-  }
-  100% {
-    -webkit-transform: scale(1);
-            transform: scale(1);
-  }
+  -webkit-transform: scale(1) translateZ(0px);
+          transform: scale(1) translateZ(0px);
 }
 
 .animation-zoomInToRight {
-  -webkit-transform: scale(1.1);
-          transform: scale(1.1);
-  -webkit-transform-origin: 20% 70%;
-          transform-origin: 20% 70%;
-  -webkit-animation: 7s 0.2s linear forwards;
-          animation: 7s 0.2s linear forwards;
+  -webkit-transform: scale(1.1) translate3d(-2%, -2%, 0);
+          transform: scale(1.1) translate3d(-2%, -2%, 0);
+  -webkit-transform-origin: center left;
+          transform-origin: center left;
 }
 
 .animation-zoomInToRight.animation_play {
-  -webkit-animation-name: zoom-in-to-right;
-          animation-name: zoom-in-to-right;
-}
-
-@-webkit-keyframes zoom-in-to-right {
-  0% {
-    -webkit-transform: scale(1.1);
-            transform: scale(1.1);
-    -webkit-transform-origin: 20% 70%;
-            transform-origin: 20% 70%;
-  }
-  100% {
-    -webkit-transform: scale(1.2);
-            transform: scale(1.2);
-    -webkit-transform-origin: 80% 30%;
-            transform-origin: 80% 30%;
-  }
-}
-
-@keyframes zoom-in-to-right {
-  0% {
-    -webkit-transform: scale(1.1);
-            transform: scale(1.1);
-    -webkit-transform-origin: 20% 70%;
-            transform-origin: 20% 70%;
-  }
-  100% {
-    -webkit-transform: scale(1.2);
-            transform: scale(1.2);
-    -webkit-transform-origin: 80% 30%;
-            transform-origin: 80% 30%;
-  }
+  -webkit-transform: scale(1.2) translate3d(-14%, 2%, 0);
+          transform: scale(1.2) translate3d(-14%, 2%, 0);
 }
 
 .animation-zoomInToLeft {
-  -webkit-transform: scale(1.1);
-          transform: scale(1.1);
-  -webkit-transform-origin: 80% 70%;
-          transform-origin: 80% 70%;
-  -webkit-animation: 7s 0.2s linear forwards;
-          animation: 7s 0.2s linear forwards;
+  -webkit-transform: scale(1.1) translate3d(2%, -2%, 0);
+          transform: scale(1.1) translate3d(2%, -2%, 0);
+  -webkit-transform-origin: center right;
+          transform-origin: center right;
 }
 
 .animation-zoomInToLeft.animation_play {
-  -webkit-animation-name: zoom-in-to-left;
-          animation-name: zoom-in-to-left;
-}
-
-@-webkit-keyframes zoom-in-to-left {
-  0% {
-    -webkit-transform: scale(1.1);
-            transform: scale(1.1);
-    -webkit-transform-origin: 80% 70%;
-            transform-origin: 80% 70%;
-  }
-  100% {
-    -webkit-transform: scale(1.2);
-            transform: scale(1.2);
-    -webkit-transform-origin: 20% 30%;
-            transform-origin: 20% 30%;
-  }
-}
-
-@keyframes zoom-in-to-left {
-  0% {
-    -webkit-transform: scale(1.1);
-            transform: scale(1.1);
-    -webkit-transform-origin: 80% 70%;
-            transform-origin: 80% 70%;
-  }
-  100% {
-    -webkit-transform: scale(1.2);
-            transform: scale(1.2);
-    -webkit-transform-origin: 20% 30%;
-            transform-origin: 20% 30%;
-  }
+  -webkit-transform: scale(1.2) translate3d(14%, 2%, 0);
+          transform: scale(1.2) translate3d(14%, 2%, 0);
 }
 
 .animation-zoomOutToRight {
-  -webkit-transform: scale(1.2);
-          transform: scale(1.2);
-  -webkit-transform-origin: 20% 30%;
-          transform-origin: 20% 30%;
-  -webkit-animation: 7s 0.2s linear forwards;
-          animation: 7s 0.2s linear forwards;
+  -webkit-transform: scale(1.2) translate3d(-2%, 2%, 0);
+          transform: scale(1.2) translate3d(-2%, 2%, 0);
+  -webkit-transform-origin: center left;
+          transform-origin: center left;
 }
 
 .animation-zoomOutToRight.animation_play {
-  -webkit-animation-name: zoom-out-to-right;
-          animation-name: zoom-out-to-right;
-}
-
-@-webkit-keyframes zoom-out-to-right {
-  0% {
-    -webkit-transform: scale(1.2);
-            transform: scale(1.2);
-    -webkit-transform-origin: 20% 30%;
-            transform-origin: 20% 30%;
-  }
-  100% {
-    -webkit-transform: scale(1.1);
-            transform: scale(1.1);
-    -webkit-transform-origin: 80% 70%;
-            transform-origin: 80% 70%;
-  }
-}
-
-@keyframes zoom-out-to-right {
-  0% {
-    -webkit-transform: scale(1.2);
-            transform: scale(1.2);
-    -webkit-transform-origin: 20% 30%;
-            transform-origin: 20% 30%;
-  }
-  100% {
-    -webkit-transform: scale(1.1);
-            transform: scale(1.1);
-    -webkit-transform-origin: 80% 70%;
-            transform-origin: 80% 70%;
-  }
+  -webkit-transform: scale(1.1) translate3d(-7%, -2%, 0);
+          transform: scale(1.1) translate3d(-7%, -2%, 0);
 }
 
 .animation-zoomOutToLeft {
-  -webkit-transform: scale(1.1);
-          transform: scale(1.1);
-  -webkit-transform-origin: 80% 30%;
-          transform-origin: 80% 30%;
-  -webkit-animation: 7s 0.2s linear forwards;
-          animation: 7s 0.2s linear forwards;
+  -webkit-transform: scale(1.2) translate3d(2%, 2%, 0);
+          transform: scale(1.2) translate3d(2%, 2%, 0);
+  -webkit-transform-origin: center right;
+          transform-origin: center right;
 }
 
 .animation-zoomOutToLeft.animation_play {
-  -webkit-animation-name: zoom-out-to-left;
-          animation-name: zoom-out-to-left;
-}
-
-@-webkit-keyframes zoom-out-to-left {
-  0% {
-    -webkit-transform: scale(1.1);
-            transform: scale(1.1);
-    -webkit-transform-origin: 80% 30%;
-            transform-origin: 80% 30%;
-  }
-  100% {
-    -webkit-transform: scale(1.2);
-            transform: scale(1.2);
-    -webkit-transform-origin: 20% 70%;
-            transform-origin: 20% 70%;
-  }
-}
-
-@keyframes zoom-out-to-left {
-  0% {
-    -webkit-transform: scale(1.1);
-            transform: scale(1.1);
-    -webkit-transform-origin: 80% 30%;
-            transform-origin: 80% 30%;
-  }
-  100% {
-    -webkit-transform: scale(1.2);
-            transform: scale(1.2);
-    -webkit-transform-origin: 20% 70%;
-            transform-origin: 20% 70%;
-  }
-}
-
-.stop_slide-animation .animation_play {
-  -webkit-animation-play-state: paused !important;
-          animation-play-state: paused !important;
+  -webkit-transform: scale(1.1) translate3d(7%, -2%, 0);
+          transform: scale(1.1) translate3d(7%, -2%, 0);
 }
 
 /* Virtual link */
