--- a/css/layout/_general.scss
+++ b/css/layout/_general.scss
@@ -7,6 +7,12 @@ main{
   min-height: 100vh;
   min-height: calc(var(--vh, 1vh) * 100);
 }
+.container-1170 {
+  width: calc(1200px - 2em);
+  max-width: 100%;
+  margin: 0 auto;
+  padding: 0 1em;
+}
 .container-fluid {
   padding-left: 1.5em;
   padding-right: 1.5em;
@@ -93,6 +99,10 @@ p{
   }
 }
 
+.fw-medium {
+  font-weight: 500;
+}
+
 /* Loader */
 .wrap {
   position: fixed;
@@ -155,4 +165,32 @@ p{
   &::-webkit-scrollbar-track {border-radius: 4px;-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.4);}
   &::-webkit-scrollbar {width: 8px;}
   &::-webkit-scrollbar-thumb {border-radius: 4px;background: rgba(0,0,0,0.45);}
+}
+
+.cs-row {
+  display: flex;
+  flex-wrap: wrap;
+  margin: 0 -15px -25px;
+}
+.col {
+  padding: 0 15px 25px;
+  flex-grow: 1;
+  &-3 {
+    width: 25%;
+    @media screen and (max-width: 768px) {
+      width: 50%;
+      br{
+        display: none;
+      }
+    }
+    @media screen and (max-width: 640px) {
+      width: 100%;
+    }
+  }
+  &-6 {
+    width: 50%;
+    @media screen and (max-width: 640px) {
+      width: 100%;
+    }
+  }
 }
