--- a/css/pages/_biens.scss
+++ b/css/pages/_biens.scss
@@ -357,6 +357,42 @@
   }
 }
 
+.fake-biens-item {
+  height: 300px;
+  background: #3e3d3d;
+  &__content {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    padding: 15px;
+  }
+  &__text {
+    font-size: 16px;
+    line-height: 25px;
+    text-transform: uppercase;
+    font-weight: 100;
+  }
+  &__btn {
+    padding: 15px 30px;
+    display: inline-block;
+    height: auto !important;
+    border: 1px solid #1a1b1d;
+    font-size: 15px;
+    line-height: 1em;
+    font-weight: 300;
+    color: #efc623;
+    margin-top: 26px;
+    transition: 0.2s;
+    &:hover {
+      background: #474747;
+    }
+  }
+}
+
 /* Liste biens */
 #biens, .biens{
   display: grid;
@@ -369,7 +405,7 @@
   @media screen and(max-width:1100px){
     margin: 0 -10px;
   }
-  a{
+  &>a{
     height: 300px;
     position: relative;
     background: #3e3d3d;
