--- a/css/style.css
+++ b/css/style.css
@@ -2585,9 +2585,14 @@ a.disabled {
 .potential-block__line {
   width: 85px;
   height: 85px;
-  margin: 15px;
+  margin: 0 15px;
   display: flex;
   align-items: center;
+}
+@media screen and (max-width: 640px) {
+  .potential-block__line {
+    margin: 15px 0;
+  }
 }
 .potential-block__line:before {
   content: "";
