Fixed some design moment

--- a/css/pages/_biens.scss
+++ b/css/pages/_biens.scss
@@ -388,7 +388,7 @@
     margin-top: 26px;
     transition: 0.2s;
     &:hover {
-      background: #474747;
+      background: #1f1f1f;
     }
   }
 }
